Fix initial commit
- Remove unnecessary things
- Change some configurations
- Add a README.md

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,16 +1,15 @@
 [metadata]
 name = face_shazam
-summary = Add a short description here!
-author = Juan Marcos Bellini
-author-email = juanmbellini@gmail.com
-license = none
-home-page = http://...
-description-file = README.rst
+summary = A face recognition library using advanced numerical methods
+description-file = README.md
 # Add here all kinds of additional classifiers as defined under
 # https://pypi.python.org/pypi?%3Aaction=list_classifiers
 classifier =
     Development Status :: 4 - Beta
     Programming Language :: Python
+
+[pbr]
+
 
 [entry_points]
 # Add here console scripts like:
@@ -51,28 +50,7 @@ addopts =
     --verbose
 
 [aliases]
-docs = build_sphinx
 
 [bdist_wheel]
 # Use this option if your package is pure-python
 universal = 1
-
-[build_sphinx]
-source_dir = docs
-build_dir = docs/_build
-
-[pbr]
-# Let pbr run sphinx-apidoc
-autodoc_tree_index_modules = True
-# autodoc_tree_excludes = ...
-# Let pbr itself generate the apidoc
-# autodoc_index_modules = True
-# autodoc_exclude_modules = ...
-# Convert warnings to errors
-# warnerrors = True
-
-[devpi:upload]
-# Options for the devpi: PyPI server and packaging tool
-# VCS export must be deactivated since we are using setuptools-scm
-no-vcs = 1
-formats = bdist_wheel
