--- a/setup.cfg
+++ b/setup.cfg
@@ -1,40 +1,20 @@
 [metadata]
 name = face_shazam
+version = 1.0.0
 summary = A face recognition library using advanced numerical methods
 description-file = README.md
-# Add here all kinds of additional classifiers as defined under
-# https://pypi.python.org/pypi?%3Aaction=list_classifiers
 classifier =
-    Development Status :: 4 - Beta
+    Development Status :: 1 - Planning
     Programming Language :: Python
-
-[pbr]
-
+    Topic :: Scientific/Engineering :: Image Recognition
 
 [entry_points]
-# Add here console scripts like:
-# console_scripts =
-#     script_name = face_shazam.module:function
-# For example:
-# console_scripts =
-#     fibonacci = face_shazam.skeleton:run
-# as well as other entry_points.
-
+console_scripts =
+	face_shazam = face_shazam.main:run
 
 [files]
-# Add here 'data_files', 'packages' or 'namespace_packages'.
-# Additional data files are defined as key value pairs of target directory
-# and source location from the root of the repository:
 packages =
     face_shazam
-# data_files =
-#    share/face_shazam_docs = docs/*
-
-[extras]
-# Add here additional requirements for extra features, like:
-# PDF =
-#    ReportLab>=1.2
-#    RXP
 
 [test]
 # py.test options when running `python setup.py test`
@@ -48,8 +28,6 @@ addopts = tests
 addopts =
     --cov face_shazam --cov-report term-missing
     --verbose
-
-[aliases]
 
 [bdist_wheel]
 # Use this option if your package is pure-python
